log
Thu 28 Sep 2023 06:59:20 PM UTC: 
 tests:  0|4
total_score: 0/70
54a6365
Thu 28 Sep 2023 07:10:54 PM UTC: 
 heap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:3: error: ‘heap’ undeclared (first use in this function); did you mean ‘Heap’?
   39 |   heap->size = 0;
      |   ^~~~
      |   Heap
heap.c:39:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
93563e9
Thu 28 Sep 2023 07:11:13 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
cfd3fe9
Thu 28 Sep 2023 07:15:30 PM UTC: 
 heap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  2|2
total_score: 20/70
df74501
Thu 28 Sep 2023 07:25:48 PM UTC: 
 heap.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:40:57: error: expected expression before ‘<’ token
   40 |   while (pos > 0  && pq->heapArray[(pos-1)/2].priority) < priority)
      |                                                         ^
heap.c:40:3: error: this ‘while’ clause does not guard... [-Werror=misleading-indentation]
   40 |   while (pos > 0  && pq->heapArray[(pos-1)/2].priority) < priority)
      |   ^~~~~
heap.c:40:67: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘while’
   40 |   while (pos > 0  && pq->heapArray[(pos-1)/2].priority) < priority)
      |                                                                   ^
heap.c:40:67: error: expected statement before ‘)’ token
cc1: all warnings being treated as errors
Compilation failed
4f3e404
Thu 28 Sep 2023 07:26:00 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
20d3e8a
Thu 28 Sep 2023 07:41:01 PM UTC: 
 heap.c | 27 +++++++++++++++++++++++++++
 1 file changed, 27 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:64:77: error: ‘posizqz’ undeclared (first use in this function); did you mean ‘posizq’?
   64 |       if (posder < pq->size && pq->heapArray[posder].priority>pq->heapArray[posizqz].priority)
      |                                                                             ^~~~~~~
      |                                                                             posizq
heap.c:64:77: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
05383bf
Thu 28 Sep 2023 07:41:13 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|0
total_score: 70/70
1b5a631
